syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.sep3.grpcserver.protobuf.tripservices";

import "ticket.proto";

service TripServices {
  rpc createTrip (TripCreationRequest) returns (TripResponse);
  rpc getTripsByUserID (TripsByDriverIDRequest) returns (TripsByDriverIDResponse);
}

message TripCreationRequest { 
  double full_price = 1;
  int32 available_seats = 2;
  string driver_id = 3;
  repeated Location stops = 4;
  
  message Location {
    string post_code = 1;
    string city = 2;
    string street_name = 3;
    string street_number = 4;
    int64 arrival_time = 5;
  }
}

message TripResponse {
  int64 id = 1;
  double full_price = 2;
  int32 available_seats = 3;
  string driver_id = 4;
  repeated Location stops = 5;
  repeated SeatTicketResponse tickets = 6;
  
  message Location {
    int64 id = 1;
    string post_code = 2;
    string city = 3;
    string street_name = 4;
    string street_number = 5;
    int64 arrival_time = 6;
  }
}

message TripsByDriverIDRequest {
  repeated string user_ids = 1;
}

message TripsByDriverIDResponse {
  repeated TripResponse trips = 1;
}
