 syntax = "proto3";
 option java_multiple_files = true;
 option java_package = "via.sep3.grpcserver.protobuf.userservices";

 service UserServices{
   rpc createUser(RequestUserInfo) returns (ResponseUserInfo);
   rpc getUserById(GetUserByIdRequest) returns (ResponseUserInfo);
 }
 
 message GetUserByIdRequest {
   string user_id = 1;
 }

 message RequestUserInfo{
   string email = 1;
   string password = 2;
   string first_name = 3;
   string last_name = 4;
   string phone = 5;
   string address = 6;
   optional string drive_license = 7;
 }
 message ResponseUserInfo{
   string first_name = 1;
   string last_name = 2;
   string phone = 3;
   string address = 4;
   string email = 5;
 }
 message ErrorResponse{
   int32 status = 1;
   string message = 2;
 }